--- a/todo
+++ b/todo
@@ -16,3 +16,6 @@ menu when changing innertext make it scramble?
 migoczące gwiazdy?
 
 --copy mail to clipboard, else mailto:
+
+
+mobile when previewing images back doesnt go back to the previous site, but closes images
